--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>1. git init</h1>
+    <h1>2. git status</h1>
+    <h1>3. git add .</h1>
+    <h1>4. git commit -m "Created Heading"</h1>
 </body>
 </html>
